# rolebot

./: README.md  app.py  config.py  main.py  models.py  pyproject.toml
bot/: __init__.py
static/js/: app.js
templates/: index.html  settings.html
